fix: checkbox align

--- a/packages/checkbox/checkbox.less
+++ b/packages/checkbox/checkbox.less
@@ -1,12 +1,12 @@
 :host {
     display: flex;
+    align-items: center;
 }
 
 label {
     --border-width: 1.5px;
 
     display: flex;
-    align-items: stretch;
 }
 
 input {
